--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-20  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.c-torture/execute/loop-13.c: New test.
+
 2002-07-19  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/expr.c: New tests.
