rs6000.md: Remove ppc630 fpcompare from single fpu list.
        * config/rs6000/rs6000.md: Remove ppc630 fpcompare from single
        fpu list.  Separate Power4 compare and delayed_compare.  Correct
        Power4 fpcompare.
        (fix_truncdfsi2_internal): Restore FPR preference.
        * config/rs6000/t-aix43 (MULTILIB_MATCHES): Add mcpu?power3,
        mcpu?power4, mcpu?604e.  Remove mpower, mpower2, mpowerpc.

From-SVN: r55601

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -543,7 +543,7 @@
 ; fp compare uses fp unit
 (define_function_unit "fpu" 1 0
   (and (eq_attr "type" "fpcompare")
-       (eq_attr "cpu" "rs64a,ppc601,ppc603,ppc604,ppc604e,ppc620,ppc630"))
+       (eq_attr "cpu" "rs64a,ppc601,ppc603,ppc604,ppc604e,ppc620"))
   5 1)
 
 (define_function_unit "fpu" 1 0
@@ -805,14 +805,14 @@
   68 67)
 
 (define_function_unit "iu2" 2 0
-  (and (eq_attr "type" "compare,delayed_compare")
-       (eq_attr "cpu" "power4"))
-  2 1)
-
-(define_function_unit "iu2" 2 0
-  (and (eq_attr "type" "mtjmpr")
+  (and (eq_attr "type" "compare")
        (eq_attr "cpu" "power4"))
   3 1)
+
+(define_function_unit "iu2" 2 0
+  (and (eq_attr "type" "delayed_compare")
+       (eq_attr "cpu" "power4"))
+  4 1)
 
 (define_function_unit "bpu" 1 0
   (and (eq_attr "type" "mtjmpr")
@@ -834,10 +834,12 @@
        (eq_attr "cpu" "power4"))
   6 1)
 
+; adjust_cost increases the cost of dependent branches,
+; so shave a few cycles off for fpcompare.
 (define_function_unit "fpu2" 2 0
   (and (eq_attr "type" "fpcompare")
        (eq_attr "cpu" "power4"))
-  8 2)
+  5 1)
 
 (define_function_unit "fpu2" 2 0
   (and (eq_attr "type" "sdiv,ddiv")
@@ -5505,7 +5507,7 @@
 (define_insn "*fix_truncdfsi2_internal"
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
 	(fix:SI (match_operand:DF 1 "gpc_reg_operand" "f")))
-   (clobber (match_operand:DI 2 "gpc_reg_operand" "=*f"))
+   (clobber (match_operand:DI 2 "gpc_reg_operand" "=f"))
    (clobber (match_operand:DI 3 "memory_operand" "=o"))]
   "(TARGET_POWER2 || TARGET_POWERPC) && TARGET_HARD_FLOAT"
   "#"
