--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-07-19  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.md: Remove ppc630 fpcompare from single
+	fpu list.  Separate Power4 compare and delayed_compare.  Correct
+	Power4 fpcompare.
+	(fix_truncdfsi2_internal): Restore FPR preference.
+	* config/rs6000/t-aix43 (MULTILIB_MATCHES): Add mcpu?power3,
+	mcpu?power4, mcpu?604e.  Remove mpower, mpower2, mpowerpc.
+
 2002-07-19  Momchil Velikov <velco@fadata.bg>
 
 	* reload1.c (reload_as_needed): Duplicate oldpat.
