* MAINTAINERS: Add myself as ra* maintainer.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55613 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-19  Michael Matz  <matz@suse.de>
+
+	* MAINTAINERS: Add myself as ra* maintainer.
+
 2002-07-16  Chris Demetriou  <cgd@broadcom.com>
 
 	* config.guess: Update to 2002-07-09 version.
