--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-20  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/20020720-1.c: New testcase.
+
 2002-07-20  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/Wsignprom.c: New tests.
