* decl2.c (cxx_decode_option): Simplify -fhandle-exceptions 	test by using positive_option.  Make whitespace consistent.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55616 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-20  Roger Sayle  <roger@eyesopen.com>
+
+	* decl2.c (cxx_decode_option): Simplify -fhandle-exceptions
+	test by using positive_option.  Make whitespace consistent.
+
 2002-07-20  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* spew.c (struct uinparsed_test): Replace 'filename' and 'lineno'
