* c-typeck.c (SAVE_SPELLING_DEPTH): Remove.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55627 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-21  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-typeck.c (SAVE_SPELLING_DEPTH): Remove.
+
 Sun Jul 21 21:36:41 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (do_local_cprop): Do not extend lifetimes of registers set by
