* c-format.c (T99_I, T99_UI): Remove.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55628 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-07-21  Neil Booth  <neil@daikokuya.co.uk>
 
+	* c-format.c (T99_I, T99_UI): Remove.
+
+2002-07-21  Neil Booth  <neil@daikokuya.co.uk>
+
 	* c-typeck.c (SAVE_SPELLING_DEPTH): Remove.
 
 Sun Jul 21 21:36:41 CEST 2002  Jan Hubicka  <jh@suse.cz>
