--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-21  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* gcc.dg/c90-arraydecl-1.c: Change C89 too C90.
+
 2002-07-20  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.c-torture/execute/20020720-1.c: New testcase.
