--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-21  Neil Booth  <neil@daikokuya.co.uk>
+
+	* jcf-path.c (GET_ENV_PATH_LIST): Remove.
+	(jcf_path_init): Use GET_ENVIRONMENT.
+
 2002-07-10  Roger Sayle  <roger@eyesopen.com>
 	    Zack Weinberg <zack@codesourcery.com>
 
