* expr.c (expand_expr) [TRY_FINALLY_EXPR]: Don't use         GOTO_SUBROUTINE_EXPR when finally_block can be re-expanded.
        * lang.c (java_unsafe_for_reeval): New.
        (LANG_HOOKS_UNSAFE_FOR_REEVAL): New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55636 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-21  Richard Henderson  <rth@redhat.com>
+
+	* lang.c (java_unsafe_for_reeval): New.
+	(LANG_HOOKS_UNSAFE_FOR_REEVAL): New.
+
 2002-07-21  Neil Booth  <neil@daikokuya.co.uk>
 
 	* jcf-path.c (GET_ENV_PATH_LIST): Remove.
