--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-07-21  Richard Henderson  <rth@redhat.com>
 
+	* expr.c (expand_expr) [TRY_FINALLY_EXPR]: Don't use
+	GOTO_SUBROUTINE_EXPR when finally_block can be re-expanded.
+
+2002-07-21  Richard Henderson  <rth@redhat.com>
+
 	* unroll.c (find_splittable_givs): Do not split DEST_ADDR givs
 	that are not unrolled completely.
 
