* c-decl.c (build_compound_literal): Defer compound literal decls 	until until file end to emit them only if they are actually used.
	* gcc.dg/gnu89-init-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55645 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-22  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-decl.c (build_compound_literal): Defer compound literal decls
+	until until file end to emit them only if they are actually used.
+
 2002-07-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* ra-build.c (check_conflict_numbers): Hide unused function.
