* c-decl.c (build_compound_literal): Set decl TREE_READONLY from TYPE.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55646 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-07-22  Jakub Jelinek  <jakub@redhat.com>
 
+	* c-decl.c (build_compound_literal): Set decl TREE_READONLY from TYPE.
+
+2002-07-22  Jakub Jelinek  <jakub@redhat.com>
+
 	* c-decl.c (build_compound_literal): Defer compound literal decls
 	until until file end to emit them only if they are actually used.
 
