* config/mips/mips.h (CLASS_CANNOT_CHANGE_MODE): Include FP_REGS 	on big-endian targets.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55653 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-22  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.h (CLASS_CANNOT_CHANGE_MODE): Include FP_REGS
+	on big-endian targets.
+
 2002-07-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* hwint.h (HOST_WIDE_INT_PRINT_DEC_SPACE,
