--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-22  David Edelsohn  <edelsohn@gnu.org>
+
+	* collect2.c (is_ctor_dtor): Add other possible JOINER values.
+
 2002-07-22  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.md (movqi): If optimizing and we can create pseudos, use
