re PR target/7361 (Internal compiler error in reload_cse_simplify_operands, at reload1.c:8387)
	PR target/7361
	* config/m68hc11/m68hc11.c (go_if_legitimate_address_internal): Accept
	constant addresses only on 68HC12.

From-SVN: r55658

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-22  Stephane Carrez  <stcarrez@nerim.fr>
+
+	PR target/7361
+	* config/m68hc11/m68hc11.c (go_if_legitimate_address_internal): Accept
+	constant addresses only on 68HC12.
+
 2002-07-22  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cppfiles.c (stack_include_file): Correct test of whether
