--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-07-22  Stephane Carrez  <stcarrez@nerim.fr>
 
+	PR target/6744
+	* config/m68hc11/m68hc11.c (m68hc11_z_replacement): Also replace
+	ASM_OPERANDS instructions.
+
+2002-07-22  Stephane Carrez  <stcarrez@nerim.fr>
+
 	PR target/7361
 	* config/m68hc11/m68hc11.c (go_if_legitimate_address_internal): Accept
 	constant addresses only on 68HC12.
