--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-21  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/java/security/provider/Gnu.java: Reference all implementation
+	classes by using Class.getName().
+
 2002-07-19  Bo Thorsen  <bo@berlioz.suse.de>
 
 	* java/lang/ieeefp.h: Add x86-64 support.
