* gnu/java/security/provider/MD5.java: Extends MessageDigest, not        MessageDigestSpi (fixes Classpath bug #783).
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55661 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-23  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/java/security/provider/MD5.java: Extends MessageDigest, not
+	MessageDigestSpi (fixes Classpath bug #783).
+
 2002-07-21  Mark Wielaard  <mark@klomp.org>
 
 	* gnu/java/security/provider/Gnu.java: Reference all implementation
