--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-22  Tom Tromey  <tromey@redhat.com>
+
+	* lex.c (java_lex): Check for `e' or `E' after 0.
+
 2002-07-21  Richard Henderson  <rth@redhat.com>
 
 	* lang.c (java_unsafe_for_reeval): New.
