* defaults.h (obstack_chunk_alloc, obstack_chunk_free): 	Default definition. 	* gcse.c: Don't define obstack_chunk_free. 	* collect2.c, conflict.c, df.c, diagnostic.c, fix-header.c, 	flow.c, gcc.c, genattrtab.c, genautomata.c, genflags.c, gensupport.c, 	integrate.c, loop.c, ra.c, read-rtl.c, regrename.c, reload1.c, 	reorg.c, tlink.c, tree.c, config/arm/arm.c, objc/objc-act.c: 	Don't define obstack macros. cp: 	* class.c, method.c, pt.c, search.c: Similarly.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55665 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-07-23  Neil Booth  <neil@daikokuya.co.uk>
+
+	* defaults.h (obstack_chunk_alloc, obstack_chunk_free):
+	Default definition.
+	* gcse.c: Don't define obstack_chunk_free.
+	* collect2.c, conflict.c, df.c, diagnostic.c, fix-header.c,
+	flow.c, gcc.c, genattrtab.c, genautomata.c, genflags.c, gensupport.c,
+	integrate.c, loop.c, ra.c, read-rtl.c, regrename.c, reload1.c,
+	reorg.c, tlink.c, tree.c, config/arm/arm.c, objc/objc-act.c:
+	Don't define obstack macros.
+
 2002-07-22  Stephane Carrez  <stcarrez@nerim.fr>
 
 	PR target/6744
