--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-07-23  Neil Booth  <neil@daikokuya.co.uk>
 
+	* config/m88k/m88k.h (SECTION_ASM_OP): Remove.
+
+2002-07-23  Neil Booth  <neil@daikokuya.co.uk>
+
 	* vmsdbgout.c (SECTION_ASM_OP): Remove.
 
 2002-07-23  Neil Booth  <neil@daikokuya.co.uk>
