--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-07-23  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (try_replace_reg): Use num_changes_pending.
+	* recog.c (num_changes_pending): New function.
+	(validate_replace_src): Use validate_repalce_src_group.
+	(validate_replace_src_group): New.
+	* recog.h (validate_repalce_src_group): New.
+	(num_changes_pending): Likewise.
+
 Tue Jul 23 12:16:58 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* calls.c (emit_library_call_value_1): If
