2002-07-21  Gabriel Dos Reis  <gdr@nerim.net>
        Fix PR/7363:
        * c-common.c (c_sizeof_or_alignof_type): New function.
        (c_alignof): Remove definition.
        * c-common.h (c_sizeof, c_alignof): Define as macros.
        (c_sizeof_or_alignof_type): Declare.
        (my_friendly_assert): Moved from cp/cp-tree.h
        * c-typeck.c (c_sizeof): Remove definition.

cp/

2002-07-21  Gabriel Dos Reis  <gdr@nerim.net>

        Fix PR/7363:
        * typeck.c (cxx_sizeof_or_alignof_type): New function.
        (c_sizeof): Remove definition.
        (expr_sizeof): Use cxx_sizeof.
        * decl2.c (build_expr_from_tree): Use cxx_sizeof_or_alignof_type.
        * decl.c (finish_destructor_body): Use cxx_sizeof.
        * semantics.c (finish_alignof): Likewise.
        (finish_alignof): Use cxx_alignof.
        * cp-tree.h (cxx_sizeof, cxx_alignof): New macros.
        (cxx_sizeof_or_alignof_type): Declare.
        (my_friendly_assert): Move to ../c-common.h.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55678 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-07-23  Gabriel Dos Reis  <gdr@nerim.net>
+
+	Fix PR/7363:
+	* c-common.c (c_sizeof_or_alignof_type): New function.
+	(c_alignof): Remove definition.
+	* c-common.h (c_sizeof, c_alignof): Define as macros.
+	(c_sizeof_or_alignof_type): Declare.
+	(my_friendly_assert): Moved from cp/cp-tree.h
+	* c-typeck.c (c_sizeof): Remove definition.
+
 2002-07-23  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (try_replace_reg): Use num_changes_pending.
